examples/test/testpolicy12030.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12030
  namespace: namespace75
spec:
  podSelector:
    matchLabels:
      key46: value26
      key36: value1
      key19: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value41
      podSelector:
        matchLabels:
          key41: value34
          key9: value29
          key27: value13
